# FEMTO-MC

./: README
asm/: compile.sh
asm/assembly_routines/: input_string.asm  multiply_signed_ints.asm  output_signed_int.asm  simple_adder.asm  simple_jump.asm  simple_log.asm  simple_serial_io.asm  simple_shift.asm
asm/output/: input_char.listings  input_char.mif  input_signed_int.listings  input_signed_int.mif  main.listings  main.mif  mult_by_shift.listings  mult_by_shift.mif  output_signed_int.listings  output_signed_int.mif  simple_adder.listings  simple_branch.mif  simple_jump.listings  simple_jump.mif  simple_log.listings  simple_serial_io.listings
asm/src/: disassembler.rs  lexer.rs  lib.rs  tests.rs
emu/: Cargo.toml  README.md  compile.sh
emu/assembler/: Cargo.toml  README.md
emu/assembly_routines/: addi_transform.asm  input_char.asm  input_signed_int.asm  main.asm  mult_by_shift.asm  output_char.asm  output_string.asm  simple_branch.asm
emu/emulator/: Cargo.toml
emu/emulator/src/: disassembler.rs  emulator.rs  main.rs
emu/output/: addi_transform.listings  addi_transform.mif  input_string.listings  input_string.mif  main.listings  main.mif  mult_by_shift.listings  mult_by_shift.mif  multiply_signed_ints.listings  multiply_signed_ints.mif  output_char.listings  output_char.mif  output_signed_int.listings  output_string.mif  (+8 more)
src/: adder_16bit.vhd  alu.vhd  alu_bitslice.vhd  barrel_shifter_16bit.vhd  buttontoled.vhd  femto_mc.vhd  femto_mc_cpu.vhd  full_adder.vhd  hex.vhd  hex_counter.vhd  memory_testbench.vhd  reg_arr_16bit.vhd  regstd.vhd  regstd16.vhd
(+3 files in other folders)
